--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+  overflow-x: hidden;
 }
 
 a {
@@ -29,9 +30,18 @@ img{
     padding: 10px 2%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     background-color: #fff;
-    position: sticky;
+    position: fixed;
+    width: 100%;
     top: 0;
     z-index: 10;
+}
+
+.nav-flex2{
+    display: flex;
+    align-items: center;
+    padding: 10px 2%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    background-color: #fff;
 }
 
 .nav-left {
@@ -172,4 +182,100 @@ img{
 .small-sidebar hr {
     width: 50%;
     margin-bottom: 25px;
+}
+
+
+/* Mani */
+.container {
+    background: #f9f9f9;
+    padding-left: 17%;
+    padding-right: 2%;
+    padding-top: 90px;
+    padding-bottom: 20px;
+}
+
+.banner {
+    width: 100%;
+
+}
+
+.banner img{
+    width: 100%;
+    border-radius: 10px;
+}
+
+
+.list-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-column-gap: 16px;
+    grid-row-gap: 30px;
+    margin-top: 15px;
+}
+
+.large-container{
+    padding-left: 7%;
+}
+
+
+.thumbnail {
+    width: 100%;
+    border-radius: 5px;
+}
+
+.vid-list .nav-flex2 {
+    align-items: start;
+    margin-top: 7px;
+}
+
+.vid-list .nav-flex2 img {
+    width: 35px;
+    margin-right: 10px;
+    border-radius: 100%;
+}
+
+.vid-info{
+    color: #5a5a5a;
+    font-size: 14px;
+
+}
+
+.vid-info {
+    color: #000;
+    font-weight: 600;
+    display: block;
+    margin-bottom: 5px;
+}
+
+.vid-info p{
+    font-size: 13px;
+}
+
+
+/* Media */
+@media (max-width: 900px) {
+    .menu-icon{
+        display: none;
+    }
+
+    .sidebar{
+        display: none;
+    }
+
+    .container, .large-container{
+        padding: 0 5%;
+    }
+
+    .nav-right img{
+        display: none;
+    }
+
+    .nav-right .user-icon {
+        display: block;
+        width: 30px;
+    }
+
+    .search-input{
+        width: 100px;
+    }
 }
